my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ESYNTAX_04/ESYNTAX_04.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ESYNTAX_04.dml:9:1: error ESYNTAX: syntax error: unexpected end-of-file
